# motile_tracker_bundled_app

./: .gitignore  LICENSE  README.md  motile-tracker.spec  motile_logo.icns  pixi.toml  pyproject.toml
.github/workflows/: bundle_app.yml
src/installer_hooks/: hook-motile_launcher.py
src/motile_launcher/: launcher.py
